--- a/style.css
+++ b/style.css
@@ -250,6 +250,20 @@ footer{
     
     }
 
+    .jugadores {
+        width: 100%;
+        height: 100%;
+        margin-top: 20px;
+        color: rgb(209, 255, 2);
+        border: dashed rgb(209, 255, 2);
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 16px;
+    }
+
 
 
     body {
